--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -16,8 +16,8 @@
     <h1>Olá, mundo!</h1>
     <p>Já me livrei da maldição!</p>
     <script>
-        window.alert('Minha primeira mensagem!')
-        window.confirm('Está gostando do curso?')
+        //window.alert('Minha primeira mensagem!')
+        //window.confirm('Está gostando do curso?')
         window.prompt('Qual é o seu nome?')
     </script>
 </body>
