--- a/aula10/ex007.html
+++ b/aula10/ex007.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Somando Numeros</title>
+</head>
 <body>
     <h1>Somando Valores</h1>
     <input type="number" name="txt1" id="txtn1">
