--- a/aula10/ex006.html
+++ b/aula10/ex006.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="1.0">
     <title>Eventos DOM</title>
     <style>
         div#area{
@@ -27,6 +26,7 @@
         a.addEventListener('click', clicar)
         a.addEventListener('mouseenter', entrar)
         a.addEventListener('mouseout', sair)
+        a.addEventListener('dblclick', doisclick)
         function clicar() {
             a.innertext = 'Clicou!'
             a.style.background = 'red'
@@ -37,6 +37,13 @@
         function sair() {
             a.innerText = 'Saiu!'
             a.style.background = 'green'
+        }
+        function doisclick(){
+            if (a.style.width == '200px'){
+            a.style.width = '400px'}
+             else {
+                a.style.width = '200px'
+            }
         }
     </script>
 </body>
