Resolução do ex16

--- a/aula14ex/ex016/modelo.html
+++ b/aula14ex/ex016/modelo.html
@@ -11,18 +11,18 @@
         <h1>Hora do Dia</h1>
     </header>
     <section>
-        <div>
+        <div id="dados">
             <p>
                 <label for="numIni">Inicio:</label>
-                <input type="number" name="numIni" id="numIni">
+                <input type="number" name="inicio" id="txti">
             </p>
             <p>
                 <label for="numFim">Fim:</label>
-                <input type="number" name="NumFim" id="NumFim">
+                <input type="number" name="fim" id="txtf">
             </p>
             <p>
                 <label for="passo">Passo:</label>
-                <input type="number" name="passo" id="passo">
+                <input type="number" name="passo" id="txtp">
             </p>
             <input type="button" value="Contar" onclick="contar()">
         </div>
